--- a/style.css
+++ b/style.css
@@ -1,3 +1,14 @@
-nav {
-	background-color: blue;
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+li {
+  display: inline;
+  float: right; 
+}
+
+li a {
+  padding: 14px 16px;
 }
