--- a/style.css
+++ b/style.css
@@ -1,14 +1,49 @@
-ul {
-  list-style-type: none;
+* {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: luminari, fantasy;
+  font-size: 20px;
+  text-align: center;
+}
+
+nav {
+  height: 120px;
+  background-color: rgb(255, 255, 255);
+  position: fixed;
+  width: 100%;
+}
+
+#logo {
+  display: inline-block;
+  text-align: center;
+  font-size: 30px;
+  color: #EF0107;
+  padding-top: 20px;
+}
+
+a {
+  text-decoration: none;
+  font-size: 20px;
+  font-weight: bold;
+  color: black;
+}
+
+ul {
+  list-style-type: none; 
+  display: inline;
+  float: right;
 }
 
 li {
-  display: inline;
-  float: right; 
+  float: left;
+  padding: 40px;
 }
 
-li a {
-  padding: 14px 16px;
+#greekChicken {
+  max-width: 100%;
+  max-height: 100%;
 }
