--- a/style.css
+++ b/style.css
@@ -17,12 +17,16 @@ nav {
   width: 100%;
 }
 
+section {
+  margin: 220px;
+}
+
 #logo {
   display: inline-block;
   text-align: center;
   font-size: 30px;
   color: #EF0107;
-  padding-top: 20px;
+  padding-top: 35px;
 }
 
 a {
@@ -46,4 +50,16 @@ li {
 #greekChicken {
   max-width: 100%;
   max-height: 100%;
+}
+
+#grapefruitDrink {
+  max-width: 40%;
+  max-height: 40%;
+  float: left;
+}
+
+#turkeydaySpecial {
+  max-width: 40%;
+  max-height: 40%;
+  float: right;
 }
