--- a/style.css
+++ b/style.css
@@ -19,6 +19,12 @@ nav {
 
 section {
   margin: 220px;
+  background-color: #D3D3D3;
+}
+
+h1  {
+  font-weight: bold;
+  font-style: italic;
 }
 
 #logo {
@@ -45,6 +51,11 @@ ul {
 li {
   float: left;
   padding: 40px;
+}
+
+form input {
+/*  font-size: 25px;
+  display: block;*/
 }
 
 #greekChicken {
